force-app/main/default/objects/Reimbursement__c/Reimbursement__c.object-meta.xml
<CustomObject>
    <description>Tracks expense reimbursements for trainers including meals, hotels, travel, mileage, and other expenses associated with training sessions and observations.</description>
    <label>Reimbursement</label>
    <nameField>
        <displayFormat>REIMB-{000000}</displayFormat>
        <label>Reimbursement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>