force-app/main/default/objects/Reimbursement__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <description>Used by the approver to provide comments, feedback, or justification related to the approval or rejection of the record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>