force-app/main/default/objects/Reimbursement__c/fields/Car_Rental__c.field-meta.xml
<CustomField>
    <fullName>Car_Rental__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Car rental expenses eligible for reimbursement.</description>
    <label>Car Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>