force-app/main/default/objects/Reimbursement__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <description>Check number of the payment received from Accounts payable for the reimbursement request.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>