force-app/main/default/objects/Reimbursement__c/fields/Contract_Level__c.field-meta.xml
<CustomField>
    <fullName>Contract_Level__c</fullName>
    <description>Categorizes the Contract levels of a Trainer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>