force-app/main/default/objects/Reimbursement__c/fields/Educator_Type__c.field-meta.xml
<CustomField>
    <fullName>Educator_Type__c</fullName>
    <description>Defines the training format and/or the educator that will deliver the training</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Educator Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>