force-app/main/default/objects/Reimbursement__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <description>The final reimbursement amount.</description>
    <formula>IF(
    ISPICKVAL(Type__c, &quot;1:1 Patient Training&quot;),
    Training_Subtotal__c,
    Hourly_Rate_Subtotal__c 
) + Parking_Tolls_Other_Subtotal__c + Mileage_Subtotal__c + Pre_Approved_Items_Subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>