force-app/main/default/objects/Reimbursement__c/fields/Hotels__c.field-meta.xml
<CustomField>
    <fullName>Hotels__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Hotel expenses eligible for reimbursement.</description>
    <label>Hotels</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>