force-app/main/default/objects/Reimbursement__c/fields/Hourly_Rate_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate_Subtotal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total rate applied for Observation calculated from Training rate object.</description>
    <label>Hourly Rate Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>