force-app/main/default/objects/Reimbursement__c/fields/Meals__c.field-meta.xml
<CustomField>
    <fullName>Meals__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Meal expenses eligible for reimbursement.</description>
    <label>Meals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>