force-app/main/default/objects/Reimbursement__c/fields/Mileage_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Subtotal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculated value of (Total Miles Travelled × Mileage Rate from Training rate object).</description>
    <label>Mileage Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>