force-app/main/default/objects/Reimbursement__c/fields/Number_Of_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Minutes__c</fullName>
    <description>Duration of the Observation.</description>
    <label>Number of Minutes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>