force-app/main/default/objects/Reimbursement__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Observation Object.</description>
    <label>Observation</label>
    <referenceTo>Observation__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>