force-app/main/default/objects/Reimbursement__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Any other expenses not covered by other categories.</description>
    <label>Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>