force-app/main/default/objects/Reimbursement__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Parking expenses eligible for reimbursement.</description>
    <label>Parking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>