force-app/main/default/objects/Reimbursement__c/fields/Parking_Tolls_Other_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Parking_Tolls_Other_Subtotal__c</fullName>
    <description>Sum of parking, tolls, and other expenses.</description>
    <formula>Parking__c + Tolls__c + Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking/Tolls/Other Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>