force-app/main/default/objects/Reimbursement__c/fields/Pre_Approved_Items_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approved_Items_Subtotal__c</fullName>
    <description>Sum of all pre-approved expenses.</description>
    <formula>Meals__c + Hotels__c + Train_Bus_Airfare__c + Car_Rental__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Approved Items Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>