force-app/main/default/objects/Reimbursement__c/fields/Rate_Additional_Patient_Applied__c.field-meta.xml
<CustomField>
    <fullName>Rate_Additional_Patient_Applied__c</fullName>
    <description>Add-on rate for multi-patient sessions (group trainings?).</description>
    <label>Rate Additional Patient Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>