force-app/main/default/objects/Reimbursement__c/fields/Rate_Applied__c.field-meta.xml
<CustomField>
    <fullName>Rate_Applied__c</fullName>
    <description>Training rate or Observation rate derived from Training rate table.</description>
    <label>Rate Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>