force-app/main/default/objects/Reimbursement__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <description>Stores a clickable link that directs users to the Reimbursement record for quick access and reference.</description>
    <formula>&quot;https://&quot; +
MID($Api.Partner_Server_URL_600,
FIND(&quot;://&quot;, $Api.Partner_Server_URL_600) + 3,
FIND(&quot;.my.salesforce.com&quot;, $Api.Partner_Server_URL_600) - FIND(&quot;://&quot;, $Api.Partner_Server_URL_600) - 3
) +
&quot;.my.site.com/TrainerPortal/reimbursement/&quot;&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>