force-app/main/default/objects/Reimbursement__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Captures the reason for rejecting the reimbursement request, providing clarity to the requester and supporting audit and review purposes.</description>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing/Incomplete training forms</fullName>
            </value>
            <value>
                <fullName>Missing/Incomplete expense forms</fullName>
            </value>
            <value>
                <fullName>Reimbursement submitted after 30 days of Training complete</fullName>
            </value>
            <value>
                <fullName>Contract/Certification expired</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>