force-app/main/default/objects/Reimbursement__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Date when reimbursement request was submitted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>