force-app/main/default/objects/Reimbursement__c/fields/Tolls__c.field-meta.xml
<CustomField>
    <fullName>Tolls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Toll expenses eligible for reimbursement.</description>
    <label>Tolls</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>