force-app/main/default/objects/Reimbursement__c/fields/Total_Miles_Travelled__c.field-meta.xml
<CustomField>
    <fullName>Total_Miles_Travelled__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total miles traveled to Train the Customer.</description>
    <label>Total Miles Travelled</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>