force-app/main/default/objects/Reimbursement__c/fields/Train_Bus_Airfare__c.field-meta.xml
<CustomField>
    <fullName>Train_Bus_Airfare__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Train, Bus, Airfare expenses eligible for reimbursement.</description>
    <label>Train/Bus/Airfare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>