force-app/main/default/objects/Reimbursement__c/fields/Training_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Training_Subtotal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total rate applied for Training calculated from Training rate object.</description>
    <label>Training Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>