force-app/main/default/objects/Reimbursement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Categorizes the reimbursement request.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:1 Patient Training</fullName>
            </value>
            <value>
                <fullName>Observation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>