force-app/main/default/objects/Reimbursement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Grand_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>