force-app/main/default/objects/Reimbursement__c/listViews/My_Pending_Approval_Requests.listView-meta.xml
<ListView>
    <fullName>My_Pending_Approval_Requests</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Trainer__c</columns>
    <columns>Rate_Applied__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>My Pending Approval Requests</label>
</ListView>