force-app/main/default/objects/Reimbursement__c/listViews/Reimbursement_Approvers_Queue_Reimbursement.listView-meta.xml
<ListView>
    <fullName>Reimbursement_Approvers_Queue_Reimbursement</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Trainer__c</columns>
    <columns>Rate_Applied__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>All Submitted Unassigned Reimbursements</label>
    <queue>Reimbursement_Approvers_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>