force-app/main/default/objects/Reimbursement__c/listViews/Submitted_Reimbursement_Requests.listView-meta.xml
<ListView>
    <fullName>Submitted_Reimbursement_Requests</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Trainer__c</columns>
    <columns>Rate_Applied__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>All Submitted Reimbursements</label>
    <sharedTo>
        <role>Clinical_Services_Manager</role>
        <role>Training_Coordinator</role>
    </sharedTo>
</ListView>